--- a/style.css
+++ b/style.css
@@ -1,11 +1,195 @@
-body{
-    background-color: #8cd3ff;
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
-h1{
-    color: aliceblue;
+
+header {
+    background-color: #4286F5;
+    color: white;
+    text-align: center;
+    padding: 10px;
+  }
+  /* upper btn box */
+  .upper-btn-box{
+    width: 100%;
+    height:100%;
+    
+    display:flex;
+    padding: 30px;
+   }
+  .upper-btn-box .left-box{
+    width: 50%;
+    height:50%;
+     
 }
-header{
-    height: 30px;
-    width: max-content;
-    background-color: aliceblue;
+.upper-btn-box .left-box button ,.upper-btn-box .right-box button{
+  border: none;
+  outline: none;
+  background-color: #4286F5;
+  padding: 13px;
+  font-size: 18px;
+  font-family: verdana;
+  color: #fff;
+  margin: 0px 10px;
 }
+  .upper-btn-box .right-box{
+    width: 50%;
+    height:50%;
+    display: flex;
+  }
+  .upper-btn-box .right-box i{
+    font-size: 25px;
+    color: #4286F5;
+    padding: 10px;
+  }
+  .upper-btn-box .right-box input{
+    width: 70%;
+    padding: 14px;
+    outline: none;
+    border: none;
+    border-bottom: 3px solid #4286F5;
+    font-size: 18px;
+    font-family: verdana;
+    font-weight: lighter;
+  }
+  /* start table code */
+  .table-box{
+    width: 100%;
+    padding:30px
+  }
+  .table-box table{
+    width: 100%;
+    border: 1px solid #ccc;
+  }
+  .table-box table tr th{
+     border-right: 1px solid #ccc;
+     padding:30px 0px 0px;
+     font-family: vardana;
+     font-family: 20px;
+     border-bottom: 1px solid #ccc;
+  }
+  .table-box table tr td{
+    border-right: 1px solid #ccc;
+    padding:10px 0px 5px;
+    text-align: center;
+    font-family: vardana;
+    border-bottom: 1px solid #ccc;
+
+  }
+  .table-box table tr td button{
+    width:  40%;
+    border: none;
+    outline: none;
+    background-color: #4286F5;
+    font-size: 15px;
+    font-family: verdana;
+    color: #fff;
+    
+    padding: 5px 0px 5px ; 
+
+  }
+  /* defining modal */
+  .modal{
+    width: 60%;
+    height: auto;
+    background-color: #f2f2f2;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    border-top:20px groove  #4286F5;
+  }
+  .modal .close-icon{
+    position: absolute;
+    right:-15px;
+    top: -30px;
+    font-size: 30px;
+    padding: 10px;
+    color: #EE534F;
+  }
+  .modal .left-modal{
+
+    width: 30%;
+    height: 100%;
+    background-color: #f2f2f2;
+  }
+  .modal .left-modal .img-box{
+
+    width: 100%;
+    height: 300px;
+    
+    display: flex;
+    padding: 30px;
+    position: relative;
+    
+    
+  }
+  .modal .left-modal .img-box input{
+    width: 40px;
+    height: 40px;
+    position:absolute;
+    right:40px; 
+    top: 90px;
+    
+    opacity: 0;
+  }
+  .modal .left-modal .img-box i{
+    font-size: 30px;
+    padding: 10px;
+    position: absolute;
+    right: 40px;
+    top: 90px;
+    color: #4286F5;
+
+  }
+  .modal .left-modal .img-box img{
+    border-radius: 10px;
+  }
+  .modal .right-modal{
+
+    width: 70%;
+    height: 100%;
+    border-left: 5px groove #4286F5;
+    padding: 30px;
+
+  }
+  .modal .right-modal .input-box{
+    width: 100%;
+    display: flex;
+    height: 45px;
+    justify-content: space-between;
+  }
+  .modal .right-modal .input-box label{
+    font-size: 15px;
+    font-weight: lighter;
+    font-family: sans-serif;
+    margin: 20px 0px;
+  }
+  .modal .right-modal .input-box input{
+    width: 70%;
+    margin: 10px 0px;
+    border:none;
+    padding:13px;
+    outline: none;
+    background-color: transparent;
+    border-bottom:3px solid #4286F5;
+  }
+  .modal .right-modal .input-box button{
+    width: 48%;
+    border: none;
+    outline: none;
+    background-color: #4286F5;
+    padding: 13px;
+    font-size: 18px;
+    font-family: verdana;
+    color: #fff;
+    margin: 0px 10px ;
+  }
+  .modal .right-modal .input-box button:disabled{
+    filter: grayscale(80%);
+  }
